[package]
name = "hello_runner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hello = { path = "../hello" }
prefer-dynamic = "0"

[dev-dependencies]
prefer-dynamic = { version = "0", features = ["link-test"] }
